--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="styles.css">
+<!--     <link rel="stylesheet" href="styles.css"> -->
     <title>Git</title>
 </head>
 
@@ -11,7 +11,7 @@
    <p>My intro to Git and colab"</p>
  
     <!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<!--     <script type="text/javascript" src="./script.js"> -->
     </script>
 
 </body>
